<?xml version="1.0"?>
<package format="2">
  <name>fast_livo</name>
  <version>0.0.0</version>
  <description>
    FAST-LIVO (modified LOAM).
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
    RSS 2014.
  </description>

  <maintainer email="dev@livoxtech.com">claydergc</maintainer>
  <license>BSD</license>
  <author email="zhangji@cmu.edu">Ji Zhang</author>

  <!-- build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- catkin package deps (keep in sync with CMakeLists.txt) -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>

  <!-- other catkin packages used by this project -->
  <depend>vikit_common</depend>
  <depend>vikit_ros</depend>

  <!-- message_generation / message_runtime: keep if this package builds .msg/.srv -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- optional: rospy -->
  <depend>rospy</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>

  <export/>
</package>
