<?xml version="1.0"?>
<package>
  <name>fastlivo2_pgo</name>
  <version>1.0.0</version>
  <description>Pose Graph Optimization for FAST-LIVO2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>fast_livo</depend>
  <depend>gtsam</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>
  <depend>opencv2</depend>
</package>